@@ -4,7 +4,7 @@ use Test::More;
 
 BEGIN {
     eval "use Test::Warn";
-    plan skip_all => "Test::Warn required to test _carp" if $@;
+    plan skip_all => "Test::Warn required to test warn" if $@;
     plan tests => 4;
 }
 
@@ -16,10 +16,10 @@ my $m = WWW::Mechanize->new;
 isa_ok( $m, 'WWW::Mechanize' );
 
 warning_like {
-    $m->_carp( "Something bad" );
+    $m->warn( "Something bad" );
 } qr[Something bad.+line \d+], "Passes the message, and includes the line number";
 
 warning_like {
     $m->quiet(1);
-    $m->_carp( "Something bad" );
+    $m->warn( "Something bad" );
 } undef, "Quiets correctly";
